--- a/12042023/index.html
+++ b/12042023/index.html
@@ -34,7 +34,9 @@
       href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/120810" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Agnetha Fältskog von ABBA, Kamrad, Pharrell Williams und Anne-Marie. Der deutsche
+      Tennisspieler Alexander Zverev hatte am 20. April Geburtstag. Außerdem war am Montag der Tag der
+      Sicherheitsnadel.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
