--- a/vergangenesendungen/index.html
+++ b/vergangenesendungen/index.html
@@ -30,9 +30,13 @@
         <h1>Happy Birthday Show</h1>
         <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
         <h2>Vergangene Sendungen</h2>
+        <p><a href="https://happybirthdayshowhelsinki.github.io/12042023">12.04.2023</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/15032023">15.03.2023</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/15022023">15.02.2023</a></p>
-        <p><a href="https://happybirthdayshowhelsinki.github.io/18012023">18.01.2023</a></p>
+        <h3 class="jahr">2023</h3>
+        <p><span class="datum">18.01.2023:</span><br>Mit Nico Santos, Alicia Keys, Justin Timberlake und Estelle<br><a
+            href="https://helsinki.at/program/120807" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a><br><a
+            href="https://cba.fro.at/596247" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
         <h3 class="jahr">2022</h3>
         <p><span class="datum">21.12.2022:</span><br>Mit Dermot Kennedy, Ellie Goulding, Gigi D'Agostino und Christina Aguilera<br><a
             href="https://helsinki.at/program/111010" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a><br><a
