--- a/vergangenesendungen/index.html
+++ b/vergangenesendungen/index.html
@@ -30,10 +30,13 @@
         <h1>Happy Birthday Show</h1>
         <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
         <h2>Vergangene Sendungen</h2>
+        <p><a href="https://happybirthdayshowhelsinki.github.io/05072023">05.07.2023</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/07062023">07.06.2023</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/10052023">10.05.2023</a></p>
-        <p><a href="https://happybirthdayshowhelsinki.github.io/12042023">12.04.2023</a></p>
         <h3 class="jahr">2023</h3>
+        <p><span class="datum">12.04.2023:</span><br>Mit Agnetha Fältskog, Kamrad, Pharrell Williams und Anne-Marie<br><a
+            href="https://helsinki.at/program/120810" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a><br><a
+            href="https://cba.fro.at/616221" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
         <p><span class="datum">15.03.2023:</span><br>Mit Aretha Franklin, Chris Martin, Jon Bon Jovi und Tina Naderer<br><a
             href="https://helsinki.at/program/120809" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a><br><a
             href="https://cba.fro.at/612943" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
