--- a/02082023/index.html
+++ b/02082023/index.html
@@ -34,7 +34,8 @@
       href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/120814" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit James Hetfield von Metallica, M&Oslash;, Lauv und Alessandra Amoroso. Die deutsche
+      Skirennläuferin Lena Dürr hat am 4. August Geburtstag. Außerdem ist am 8. August Tag der Unendlichkeit.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
