--- a/22112023/index.html
+++ b/22112023/index.html
@@ -31,19 +31,19 @@
   <div class="content">
     <h1>Happy Birthday Show</h1>
     <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
-    <div class="announcement-1 alert alert-success" style="margin-top: 0;">
+    <div class="announcement-1 alert alert-success" style="margin-top: 0; margin-bottom: 15px;">
       <h2 class="announcement-font">Jubiläumsausgabe: 22.11.2023 18:00 Uhr</h2>
     </div>
-    <h3 class="announcement-2 announcement-font">Die Happy Birthday Show wird vier Jahre alt!</h3>
+    <iframe src="https://cba.fro.at/641489/embed?&waveform=false" width="100%" height="99"
+      style="border:none; width:100%; height:79px; margin-bottom: 10px;"></iframe>
+    <h3 class="announcement-2 announcement-font" style="padding-top: 0;">Die Happy Birthday Show wird vier Jahre alt!</h3>
     <p>Und wenn eine Geburtstags-Sendung Geburtstag hat, dann wird das gefeiert. Deshalb gibt es am 22. November eine
       Jubiläumsausgabe, in der wir gemeinsam mit Bryan Adams, Lorde und Toby Romeo feiern. Neben Musik von diesen
       MusikerInnen hören wir auch die drei bekanntesten Hits aus dem letzten Happy Birthday Show Jahr. Beginnen werden
       wir die Jubiläumsausgabe, wie in den letzten Jahren auch schon, mit der ersten Moderation der ersten Happy
       Birthday Show vom 1. Dezember 2019 und dem ersten Lied: Mat Kearney - Coming Home.</p>
     <p><a href="https://helsinki.at/program/120818" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
-    <p>Sie können die Jubiläumsausgabe am 22.11.2023 von 18 bis 19 Uhr in Graz auf der Frequenz 92,6 oder im <a
-      href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
-    </p>
+    <p><a href="https://cba.fro.at/641489" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
