--- a/vergangenesendungen/index.html
+++ b/vergangenesendungen/index.html
@@ -30,10 +30,13 @@
         <h1>Happy Birthday Show</h1>
         <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
         <h2>Vergangene Sendungen</h2>
+        <p><a href="https://happybirthdayshowhelsinki.github.io/22112023">22.11.2023</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/25102023">25.10.2023</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/27092023">27.09.2023</a></p>
-        <p><a href="https://happybirthdayshowhelsinki.github.io/30082023">30.08.2023</a></p>
         <h3 class="jahr">2023</h3>
+        <p><span class="datum">30.08.2023:</span><br>Mit Malik Harris, Bebe Rexha, Alan Walker und Lea Michele<br><a
+            href="https://helsinki.at/program/120815" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a><br><a
+            href="https://cba.fro.at/631884" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
         <p><span class="datum">02.08.2023:</span><br>Mit James Hetfield, M&Oslash;, Lauv und Alessandra Amoroso<br><a
             href="https://helsinki.at/program/120814" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a><br><a
             href="https://cba.fro.at/628467" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
