--- a/20122023/index.html
+++ b/20122023/index.html
@@ -34,7 +34,9 @@
       href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/120819" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Joseph Washbourn von Toploader, Mette Lindberg von The Asteroids Galaxy Tour, Frans und
+      Nelly Furtado. Der deutsche Dichter Heinrich Heine hatte am 13. Dezember Geburtstag. Passend zur Vorweihnachtszeit
+      war außerdem am 12. Dezember der Tag des Weihnachtssterns.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
