--- a/20122023/index.html
+++ b/20122023/index.html
@@ -30,10 +30,13 @@
     <h1>Happy Birthday Show</h1>
     <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
     <h2>Sendung am 20.12.2023 um 18:00 Uhr</h2>
-    <p>Sie können diese Sendung am 20.12.2023 von 18 bis 19 Uhr in Graz auf der Frequenz 92,6 oder im <a
-      href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
+    <div class="col-md-6">
+      <iframe src="https://cba.fro.at/644691/embed?&waveform=false" width="100%" height="99"
+        style="border:none; width:100%; height:79px; margin-bottom: 10px;"></iframe>
+    </div>
     <p><a href="https://helsinki.at/program/120819" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
+    <p><a href="https://cba.fro.at/644691" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
     <p>Heute feiern wir mit Joseph Washbourn von Toploader, Mette Lindberg von The Asteroids Galaxy Tour, Frans und
       Nelly Furtado. Der deutsche Dichter Heinrich Heine hatte am 13. Dezember Geburtstag. Passend zur Vorweihnachtszeit
       war außerdem am 12. Dezember der Tag des Weihnachtssterns.</p>
