--- a/17012024/index.html
+++ b/17012024/index.html
@@ -34,7 +34,9 @@
       href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/130408" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute gibt es eine Wiederholung der Sendung vom 19.01.2022.</p>
+    <p>"Heute feiern wir mit Alvaro Soler, Mark Forster, Lisa Pac und Janis Joplin. Der Physiker Stephen Hawking hatte
+      am 8. Jänner Geburtstag. Außerdem ist heute am 19. Jänner Tag des Popcorns."</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
