--- a/14022024/index.html
+++ b/14022024/index.html
@@ -34,7 +34,9 @@
       href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/130409" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Rick Astley, Nina Zilli, Matt Simons und Dinah Shore. Am 12. Februar hatte der ehemalige
+      US-Präsident Abraham Lincoln Geburtstag. Außerdem ist heute am 14. Februar der internationale
+      Verschenk-Ein-Buch-Tag.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
